--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -8,6 +8,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
@@ -23,6 +24,7 @@ COPY database/ ./database/
 COPY pipeline/ ./pipeline/
 COPY models/ ./models/
 COPY data/ ./data/
+COPY run_integrated_pipeline.py .
 
 # Expose port
 EXPOSE 5000
