--- a/docker/Dockerfile.dashboard
+++ b/docker/Dockerfile.dashboard
@@ -7,6 +7,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
@@ -15,10 +16,11 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy dashboard code
+# Copy necessary files
 COPY dashboard/ ./dashboard/
 COPY data/ ./data/
 COPY results/ ./results/
+COPY app_complete_dashboard.py .
 
 # Expose Streamlit port
 EXPOSE 8501
@@ -26,5 +28,5 @@ EXPOSE 8501
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
 
-# Run Streamlit
-CMD ["streamlit", "run", "dashboard/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+# Run Streamlit with the complete dashboard
+CMD ["streamlit", "run", "app_complete_dashboard.py", "--server.port=8501", "--server.address=0.0.0.0"]
