--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,8 @@
+version: '3.8'
+
 services:
-  # PostgreSQL Database
   db:
-    image: postgres:15-alpine
+    image: postgres:15
     container_name: weefarm_db
     environment:
       POSTGRES_USER: postgres
@@ -16,86 +17,63 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - weefarm_network
+    restart: unless-stopped
 
-  # Backend API
   backend:
     build:
-      context: .
-      dockerfile: Dockerfile.backend
+      context: ..
+      dockerfile: docker/Dockerfile.backend
     container_name: weefarm_backend
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:0000@db:5432/weefarm_db
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: weefarm_db
-      DB_USER: postgres
-      DB_PASSWORD: 0000
-      API_HOST: 0.0.0.0
-      API_PORT: 5000
+      PYTHONUNBUFFERED: 1
     ports:
       - "5000:5000"
-    depends_on:
-      db:
-        condition: service_healthy
-    volumes:
-      - ./models:/app/models
-      - ./data:/app/data
-      - ./results:/app/results
-    networks:
-      - weefarm_network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Streamlit Dashboard
-  dashboard:
-    build:
-      context: .
-      dockerfile: Dockerfile.dashboard
-    container_name: weefarm_dashboard
-    environment:
-      API_BASE_URL: http://backend:5000/api/v1
-    ports:
-      - "8501:8501"
-    depends_on:
-      - backend
-    volumes:
-      - ./data:/app/data
-      - ./results:/app/results
-      - ./visualizations:/app/visualizations
-    networks:
-      - weefarm_network
-    restart: unless-stopped
-
-  # Pipeline Runner (Optional - for scheduled runs)
   pipeline:
     build:
-      context: .
-      dockerfile: Dockerfile.backend
+      context: ..
+      dockerfile: docker/Dockerfile.backend
     container_name: weefarm_pipeline
-    environment:
-      DATABASE_URL: postgresql://postgres:0000@db:5432/weefarm_db
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: weefarm_db
-      DB_USER: postgres
-      DB_PASSWORD: 0000
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - ./models:/app/models
-      - ./data:/app/data
-      - ./results:/app/results
-      - ./visualizations:/app/visualizations
-    networks:
-      - weefarm_network
-    command: python pipeline/pipeline.py
-    restart: "no"  # Run once, don't restart
+    environment:
+      DATABASE_URL: postgresql://postgres:0000@db:5432/weefarm_db
+      PYTHONUNBUFFERED: 1
+      RUN_PIPELINE: "true"
+    restart: "no"
+    command: ["python", "run_integrated_pipeline.py"]
+    profiles: ["manual"]  # Only start when explicitly requested
 
-networks:
-  weefarm_network:
-    driver: bridge
+  dashboard:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.dashboard
+    container_name: weefarm_dashboard
+    depends_on:
+      - backend
+    environment:
+      BACKEND_URL: http://backend:5000
+      PYTHONUNBUFFERED: 1
+    ports:
+      - "8501:8501"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   postgres_data:
+    driver: local
